@@ -172,6 +172,8 @@ class CheckImage(object):
         self.dir = dir
         self.arch, self.featureset, self.flavour = arch, featureset, flavour
 
+        self.changelog = Changelog(version=VersionLinux)[0]
+
         self.config_entry_build = config.merge('build', arch, featureset, flavour)
         self.config_entry_image = config.merge('image', arch, featureset, flavour)
 
@@ -204,7 +206,20 @@ class CheckImage(object):
             out.write('Image too large (%d > %d)!  Refusing to continue.\n' % (size, value))
             return 1
 
-        out.write('Image fits (%d <= %d).  Continuing.\n' % (size, value))
+        # 1% overhead is desirable in order to cope with growth
+        # through the lifetime of a stable release. Warn if this is
+        # not the case.
+        usage = (float(size)/value) * 100.0
+        out.write('Image size %d/%d, using %.2f%%.  ' % (size, value, usage))
+        if size > value:
+            sys.write('Too large.  Refusing to continue.\n')
+            return 1
+        elif usage >= 99.0:
+            out.write('Under 1%% space in %s.  ' % self.changelog.distribution)
+        else:
+            out.write('Image fits.  ')
+        out.write('Continuing.\n')
+
         return 0
 
 
