@@ -14,6 +14,9 @@ linux (3.16.7-ckt2-2) UNRELEASED; urgency=medium
     OMAP5_DSS_HDMI, DISPLAY_ENCODER_TPD12S015, DISPLAY_CONNECTOR_HDMI,
     USB_DWC3_OMAP, EXTCON_PALMAS, TI_EMIF and DDR.
     Based on a patch from Chen Baozi (Closes: #772953)
+  * [armel] Change configuration to reduce kernel image size
+    - Warn if image size leaves less than 1% spare capacity in the flash. This
+      allows some slack for growth over the lifetime of a stable release.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 13 Dec 2014 11:45:48 +0000
 
